enlarged calendar arrows and fixed checkbox alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,3 +18,9 @@
     float:left;
     margin:3px 3px 3px 3px 0
 }
+
+span {
+  .fc-text-arrow {
+    font-size: 20px;
+  }
+}
