--- a/app/assets/stylesheets/newstyle.css.scss
+++ b/app/assets/stylesheets/newstyle.css.scss
@@ -1424,9 +1424,9 @@ body.jobs.new #main label.boolean.required {
   margin-left: 10px;
 }
 
-input[type="checkbox"] {
-  margin: 20px 0 0;
-}
+// input[type="checkbox"] {
+//   margin: 20px 0 0;
+// }
 
 .lead {
   font-size: 31px;
